@@ -1,4 +1,6 @@
 September 2018 6.5
+  - LAM Pro:
+   -> Auto deletion of entries with dynamic directory services support (requires PHP 7.2).
   - Fixed bugs:
    -> Issue during uppercase login modification (#197)
 
